--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "and": "nodemon scraper.js"
+    "and": "nodemon scraper.js",
+    "build": "build index.js"
   },
   "keywords": [],
   "author": "",
